# TCC1

./: CMakeLists.txt
Compiler/: instr.c  instr.h  main.c  parse.h  util.c  util.h
Compiler/c compiler/: instr.c  parse.c  util.h
Compiler/py compiler/: instructions.py  lexer.py  main.py
Compilers/Assembler/: file.code  lexer.py  main.py
Compilers/c compiler/: instr.h  util.c
Components/ALU/: circuit.data  circuit_backup_1.data  circuit_backup_2.data  circuit_backup_3.data  circuit_backup_4.data  circuit_backup_5.data  circuit_backup_6.data
Components/ByteDec/: circuit_backup_5.data
Components/Core/: circuit.data  circuit_backup_0.data  circuit_backup_1.data  circuit_backup_2.data  circuit_backup_3.data  circuit_backup_4.data  circuit_backup_5.data  circuit_backup_6.data
Components/ICMatch/: circuit.data  circuit_backup_2.data  circuit_backup_4.data  circuit_backup_5.data  circuit_backup_6.data
Components/IO Port/: circuit.data  circuit_backup_0.data  circuit_backup_1.data  circuit_backup_2.data  circuit_backup_3.data  circuit_backup_4.data  circuit_backup_5.data  circuit_backup_6.data
Components/IO Port 8/: circuit_backup_0.data  circuit_backup_1.data  circuit_backup_2.data  circuit_backup_3.data  circuit_backup_4.data  circuit_backup_5.data  circuit_backup_6.data
Components/InstrDec/: circuit.data  circuit_backup_0.data  circuit_backup_1.data  circuit_backup_2.data  (+4 more)
Computer/: circuit.data
Test_programs/: Add_5.code  Add_5.txt  Calibrating_Laser_Canons.code
documents/: Assembly.md  hll.md  instructionset.md
pictures/: docs.txt
(+324 files in other folders)
